--- a/public/index.html
+++ b/public/index.html
@@ -30,8 +30,12 @@
 </head>
 
 <body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
+  <a href="https://www.getupside.com/mobile/app/ccpa_request">ccpa_request</a>
+  <a href="http://upsideapp://deeplink/ccpa_request">link</a>
+  <a href="upsideapp://deeplink/ccpa_request">link 2</a>
+
+  <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
+  <!-- <div id="root"></div> -->
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
