--- a/public/index.html
+++ b/public/index.html
@@ -30,9 +30,17 @@
 </head>
 
 <body>
-  <a href="https://www.getupside.com/mobile/app/ccpa_request">ccpa_request</a>
-  <a href="http://upsideapp://deeplink/ccpa_request">link</a>
-  <a href="upsideapp://deeplink/ccpa_request">link 2</a>
+  <div class="flex flex-col w-full">
+    <div class="button-link">
+      <a href="http://upsideapp://deeplink/ccpa_request">universal link</a>
+    </div>
+    <div class="button-link">
+      <a href="http://upsideapp://deeplink/ccpa_request">broken deep link</a>
+    </div>
+    <div class="button-link">
+      <a href="upsideapp://deeplink/ccpa_request">fixed deep link</a>
+    </div>
+  </div>
 
   <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
   <!-- <div id="root"></div> -->
