--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
 <body>
   <div class="flex flex-col w-full">
     <div class="button-link">
-      <a href="http://upsideapp://deeplink/ccpa_request">universal link</a>
+      <a href="https://www.getupside.com/mobile/app/ccpa_request">universal link</a>
     </div>
     <div class="button-link">
       <a href="http://upsideapp://deeplink/ccpa_request">broken deep link</a>
